--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="container mt-5">
         <div class="jumbotron bg-secondary text-light text-center pixel-border">
-            <img src="/pic/banner.gif" alt="Banner" class="img-fluid">
+            <img src="banner.gif" alt="Banner" class="img-fluid">
             <h1 class="display-4">Download Tools</h1>
             <p class="lead">Find the best tools for your needs!</p>
         </div>
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card bg-dark text-light pixel-border">
-                    <img src="/pic/py2exe.png" class="card-img-top" alt="Tool 1">
+                    <img src="py2exe.png" class="card-img-top" alt="Tool 1">
                     <div class="card-body">
                         <h5 class="card-title">PYTHON TO EXE CONVERTER!</h5>
                         <p class="card-text">This is program convert code python(.py) to (.exe) </p>
@@ -48,7 +48,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card bg-dark text-light pixel-border">
-                    <img src="/pic/soon.gif" class="card-img-top" alt="Tool 2">
+                    <img src="soon.gif" class="card-img-top" alt="Tool 2">
                     <div class="card-body">
                         <h5 class="card-title">Tool 2</h5>
                         <p class="card-text">Coming soon.</p>
@@ -59,7 +59,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card bg-dark text-light pixel-border">
-                    <img src="/pic/soon.gif" class="card-img-top" alt="Tool 3">
+                    <img src="soon.gif" class="card-img-top" alt="Tool 3">
                     <div class="card-body">
                         <h5 class="card-title">Tool 3</h5>
                         <p class="card-text">Coming soon.</p>
