--- a/tool1.html
+++ b/tool1.html
@@ -30,7 +30,7 @@
         <p>โปรแกรมแปลงไฟล์ Code python.py ไปเป็น .exe สําหรับ run บน windows.</p>
         <br>
         <center>
-            <img src="/pic/tool1.jpg" alt="Tool 1" class="img-fluid pixel-border">
+            <img src="tool1.jpg" alt="Tool 1" class="img-fluid pixel-border">
         </center><br>
         <h2>สิ่งที่ต้องมีก่อนใช้งานได้!</h2>
         <p>-Python3 </p>
