--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Program Tools Download</title>
+    <title>Tools Download</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-dark text-light pixel-font">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Program Tools</a>
+        <a class="navbar-brand" href="index.html">TOOLS DOWNLOAD</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,7 +29,7 @@
     <div class="container mt-5">
         <div class="jumbotron bg-secondary text-light text-center pixel-border">
             <img src="banner.gif" alt="Banner" class="img-fluid">
-            <h1 class="display-4">Download Tools</h1>
+            <h1 class="display-4">Program</h1>
             <p class="lead">Find the best tools for your needs!</p>
         </div>
         
