--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
     <div class="container mt-5">
         <div class="jumbotron bg-secondary text-light text-center pixel-border">
+            <p class="lead">THIS IS MY TOOLS</p>
             <img src="banner.gif" alt="Banner" class="img-fluid">
-            <h1 class="display-4">Program</h1>
+            
             <p class="lead">Find the best tools for your needs!</p>
         </div>
         
