--- a/tool1.html
+++ b/tool1.html
@@ -39,21 +39,21 @@
         <h5>วิธีใช้งานโปรแกรม</h5>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/JU_EWwhS-ck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
-        <p>Step1 -รันโปรแกรม Program_py_to_exe.bat</p><br>
-        <p>Step2 -เลือกไฟล์ .py ที่ต้องการแปลง</p><br>
-        <p>Step3 -เลือกไดเรกทอรีที่ต้องการเก็บไฟล์ .exe</p><br>
-        <p>Step4 -(ถ้ามี) เลือกไฟล์ไอคอน .ico</p><br>
-        <p>Step5 -เลือกตัวเลือกการสร้างไฟล์เดียว (--onefile) หรือการปิดหน้าต่างคอนโซล (--windowed)
+        <p>-รันโปรแกรม Program_py_to_exe.bat</p><br>
+        <p>-เลือกไฟล์ .py ที่ต้องการแปลง</p><br>
+        <p>-เลือกไดเรกทอรีที่ต้องการเก็บไฟล์ .exe</p><br>
+        <p>-(ถ้ามี) เลือกไฟล์ไอคอน .ico</p><br>
+        <p>-เลือกตัวเลือกการสร้างไฟล์เดียว (--onefile) หรือการปิดหน้าต่างคอนโซล (--windowed)
         </p><br>
-        <p>Step6 -กดปุ่ม Convert to EXE </p><br>
-        <p>Step7 -กดปุ่ม Contact Developer เพื่อดูข้อมูลติดต่อผู้พัฒนา</p><br>
-        <p>Step8 -ใช้ปุ่ม Reset เพื่อรีเซ็ตฟอร์ม (โปรแกรมจะบันทึกการตั้งค่าเมื่อปิดโปรแกรม)
+        <p>-กดปุ่ม Convert to EXE </p><br>
+        <p>-กดปุ่ม Contact Developer เพื่อดูข้อมูลติดต่อผู้พัฒนา</p><br>
+        <p>-ใช้ปุ่ม Reset เพื่อรีเซ็ตฟอร์ม (โปรแกรมจะบันทึกการตั้งค่าเมื่อปิดโปรแกรม)
         </p><br>
 
         <a href="#" class="btn btn-secondary pixel-btn"
         id="downloadButton1">Download Program!</a><br><br>
 
-        <h2>FAQ</h2>
+        
         <p>กรณีที่ต้องการติดตั้ง PyInstaller ในระบบ จำเป็นต้องมีสิทธิ์ในการดำเนินการติดตั้งแพ็กเกจใน Python (pip install)</p>
         <a href="index.html" class="btn btn-primary pixel-btn mt-3">Back</a>
     </div><br>
