--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
     <div class="container mt-5">
         <div class="jumbotron bg-secondary text-light text-center pixel-border">
-            <p class="lead">THIS IS MY TOOLS</p>
+            <p class="lead">WELCOME!</p>
             <img src="banner.gif" alt="Banner" class="img-fluid">
             
-            <p class="lead">Find the best tools for your needs!</p>
+            <p class="lead">Find the best tools for your needs.</p>
         </div>
         
         <div class="row">
