--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
             </div>
             <div class="col-md-4">
                 <div class="card bg-dark text-light pixel-border">
-                    <img src="soon.gif" class="card-img-top" alt="Tool 2">
+                    <img src="tool2.jpg" class="card-img-top" alt="Tool 2">
                     <div class="card-body">
-                        <h5 class="card-title">Tool 2</h5>
-                        <p class="card-text">Coming soon.</p>
+                        <h5 class="card-title">DATASHEET VIEWER!</h5>
+                        <p class="card-text">Easy search & download electronic part data-sheet and more function.</p>
                         <a href="tool2.html" class="btn btn-primary pixel-btn">Details</a>
-                        <a href="#" class="btn btn-secondary pixel-btn" onclick="downloadTool('Tool 2')">Download</a>
+                        <a href="#" class="btn btn-secondary pixel-btn"
+                        id="downloadButton2">Download</a>
                     </div>
                 </div>
             </div>
