--- a/tool2.html
+++ b/tool2.html
@@ -27,14 +27,14 @@
 
     <div class="container mt-5">
         <h4 class="mb-4">DATASHEET VIEWER </h4>
-        <p>โปรแกรมค้นหาและดาว์นโหลด electronic data-sheet จากอินเตอร์เน็ต และบันทึกลงฐานข้อมูลในเครื่องคอมพิวเตอร์เพื่อใช้งานในโหมดออฟไลน์ได้</p>
+        <p>โปรแกรมค้นหาและดาวน์โหลด electronic data-sheet จากอินเตอร์เน็ต และบันทึกลงฐานข้อมูลในเครื่องคอมพิวเตอร์เพื่อใช้งานในโหมดออฟไลน์ได้</p>
         <br>
         <center>
             <img src="tool2-1.jpg" alt="Tool 1" class="img-fluid pixel-border">
         </center><br>
         <h5>##ฟังก์ชั่นการใช้งาน</h5>
         <p>-Search Online ค้นหาจากอินเตอร์เน็ต</p>
-        <p>-Add to Database เพิ่มไฟล์ที่ดาว์นโหลดลงฐานข้อมูลโปรแกรม</p>
+        <p>-Add to Database เพิ่มไฟล์ที่ดาวน์โหลดลงฐานข้อมูลโปรแกรม</p>
         <p>-Open Local เปิดไฟล์ที่เลือกจากฐานข้อมูลในเครื่อง</p>
         <p>-Remove form Database ลบไฟล์ที่เลือกออกจากฐานข้อมูล</p>
         <p>-Search in Database ค้นหาไฟล์จากชื่อในฐานข้อมูล</p>
@@ -48,7 +48,7 @@
         id="downloadButton2">Download Program!</a><br><br>
 
         
-        <p>**กรณีลบไฟล์ .pdf ที่ดาว์นโหลดไว้ โปรแกรมจะหาไฟล์จากฐานข้อมูลไม่ได้ แนะนําให้เก็บไฟล์ที่ดาว์นโหลดไว้ในโฟลเดอร์ของโปรแกรม!</p>
+        <p>**กรณีลบไฟล์ .pdf ที่ดาวน์โหลดไว้ โปรแกรมจะหาไฟล์จากฐานข้อมูลไม่ได้ แนะนําให้เก็บไฟล์ที่ดาวน์โหลดไว้ในโฟลเดอร์ของโปรแกรม!</p>
         <a href="index.html" class="btn btn-primary pixel-btn mt-3">Back</a>
     </div><br>
 
