--- a/index.html
+++ b/index.html
@@ -61,11 +61,46 @@
             </div>
             <div class="col-md-4">
                 <div class="card bg-dark text-light pixel-border">
+                    <img src="tool3.jpg" class="card-img-top" alt="Tool 3">
+                    <div class="card-body">
+                        <h5 class="card-title">VOICE TO TEXT CONVERTER!</h5>
+                        <p class="card-text">Program convert voice(.mp3) to text file and more function.</p>
+                        <a href="tool3.html" class="btn btn-primary pixel-btn">Details</a>
+                        <a href="#" class="btn btn-secondary pixel-btn"
+                        id="downloadButton3">Download</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark text-light pixel-border">
+                    <img src="tool4.jpg" class="card-img-top" alt="Tool 4">
+                    <div class="card-body">
+                        <h5 class="card-title">20m. Beep Test Recorder!</h5>
+                        <p class="card-text">Multi-stage fitness test recorder & vo2max calculator program.</p>
+                        <a href="tool4.html" class="btn btn-primary pixel-btn">Details</a>
+                        <a href="#" class="btn btn-secondary pixel-btn"
+                        id="downloadButton4">Download</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark text-light pixel-border">
                     <img src="soon.gif" class="card-img-top" alt="Tool 3">
                     <div class="card-body">
-                        <h5 class="card-title">Tool 3</h5>
+                        <h5 class="card-title">Tool 5</h5>
                         <p class="card-text">Coming soon.</p>
-                        <a href="tool3.html" class="btn btn-primary pixel-btn">Details</a>
+                        <a href="tool4.html" class="btn btn-primary pixel-btn">Details</a>
+                        <a href="#" class="btn btn-secondary pixel-btn" onclick="downloadTool('Tool 3')">Download</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark text-light pixel-border">
+                    <img src="soon.gif" class="card-img-top" alt="Tool 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Tool 6</h5>
+                        <p class="card-text">Coming soon.</p>
+                        <a href="tool4.html" class="btn btn-primary pixel-btn">Details</a>
                         <a href="#" class="btn btn-secondary pixel-btn" onclick="downloadTool('Tool 3')">Download</a>
                     </div>
                 </div>
