--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
             </div>
             <div class="col-md-4">
                 <div class="card bg-dark text-light pixel-border">
-                    <img src="soon.gif" class="card-img-top" alt="Tool 3">
+                    <img src="tool5.jpg" class="card-img-top" alt="Tool 3">
                     <div class="card-body">
-                        <h5 class="card-title">Tool 5</h5>
-                        <p class="card-text">Coming soon.</p>
-                        <a href="tool4.html" class="btn btn-primary pixel-btn">Details</a>
-                        <a href="#" class="btn btn-secondary pixel-btn" onclick="downloadTool('Tool 3')">Download</a>
+                        <h5 class="card-title">AI & QR Code Scanner V1 & V2</h5>
+                        <p class="card-text">Qr Code Scanner with AI using computer vision & python.</p>
+                        <a href="tool5.html" class="btn btn-primary pixel-btn">Details</a>
+                        <a href="#" class="btn btn-secondary pixel-btn"
+                        id="downloadButton5">Download</a>
                     </div>
                 </div>
             </div>
