--- a/tool5.html
+++ b/tool5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tool 3 Details</title>
+    <title>Tool 5 Details</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -26,23 +26,25 @@
     </nav>
 
     <div class="container mt-5">
-        <h4 class="mb-4">VOICE TO TEXT CONVERTER </h4>
-        <p>โปรแกรมแปลงไฟล์เสียง .mp3 เป็นข้อความและสามารถบันทึกไฟล์เป็น .txt ได้</p>
+        <h4 class="mb-4">AI & QR Code Scanner V1 & V2</h4>
+        <p>โปรแกรม AI & QR Code Scanner Version 1 และ Version 2 มีฟังก์ชั่นในการสร้าง QR Code ในโปรแกรม </p>
         <br>
         <center>
-            <img src="tool3-2.png" height="50%" width="50%" alt="Tool 1" class="img-fluid pixel-border">
-        </center><br>
-        <h5>ฟังก์ชั่นการใช้งาน</h5>
-        <p>-เลือกไฟล์เสียง .mp3 ที่ต้องการแปลงจากคอมพิวเตอร์</p>
-        <p>-แปลงเสียงเป็นข้อความ แล้วรอสักครู่</p>
-        <p>-ข้อความที่แปลงจะโชว์ด้านล่าง</p>
-        <p>-กด "บันทึกข้อความ" เพื่อบันทึกข้อความที่แปลงเป็นไฟล์ .txt</p><br>
+            <img src="tool5.jpg"  alt="Tool 1" class="img-fluid pixel-border">
+        </center>
+        <br>
+        <center>
+            <img src="v1.jpg" alt="Tool 1" class="img-fluid pixel-border"><br>
+            <img src="v1-1.jpg"  alt="Tool 1" class="img-fluid pixel-border" width="600" height="600"><br><br><br><br>
+            <img src="v2.jpg"  alt="Tool 1" class="img-fluid pixel-border"><br>
+            <img src="v2-2.jpg"  alt="Tool 1" class="img-fluid pixel-border"width="600" height="600"><br><br><br><br>
+        </center>
 
-        <h5>วิธีใช้งานโปรแกรม</h5>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uc2VBsgZOa4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h5>ตัวอย่างการใช้งานโปรแกรม</h5>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/NYqlm9IJAfg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
        
-        <a href="https://drive.google.com/file/d/1XX4Fd9wmzuN7H-C4cWKH9F645RVOdgmD/view?usp=sharing" class="btn btn-secondary pixel-btn"
+        <a href="https://drive.google.com/file/d/1dj3FYHo3VnzqoE0-9SQO-SL40uCy-IU7/view?usp=sharing" class="btn btn-secondary pixel-btn"
         id="downloadButton2">Download Program!</a><br><br>
 
         <a href="index.html" class="btn btn-primary pixel-btn mt-3">Back</a>
