--- a/index.html
+++ b/index.html
@@ -97,6 +97,40 @@
             </div>
             <div class="col-md-4">
                 <div class="card bg-dark text-light pixel-border">
+                    <img src="tool6-index.png" class="card-img-top" alt="Tool 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Assembly Opcode Finder (MCS-51)</h5>
+                        <p class="card-text">Assembly Opcode Finder with 8051 Simulator (edsim51).</p>
+                        <a href="tool6.html" class="btn btn-primary pixel-btn">Details</a>
+                        <a href="#" class="btn btn-secondary pixel-btn"
+                        id="downloadButton6">Download</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark text-light pixel-border">
+                    <img src="soon.gif" class="card-img-top" alt="Tool 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Tool 6</h5>
+                        <p class="card-text">Coming soon.</p>
+                        <a href="tool4.html" class="btn btn-primary pixel-btn">Details</a>
+                        <a href="#" class="btn btn-secondary pixel-btn" onclick="downloadTool('Tool 3')">Download</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark text-light pixel-border">
+                    <img src="soon.gif" class="card-img-top" alt="Tool 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Tool 6</h5>
+                        <p class="card-text">Coming soon.</p>
+                        <a href="tool4.html" class="btn btn-primary pixel-btn">Details</a>
+                        <a href="#" class="btn btn-secondary pixel-btn" onclick="downloadTool('Tool 3')">Download</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark text-light pixel-border">
                     <img src="soon.gif" class="card-img-top" alt="Tool 3">
                     <div class="card-body">
                         <h5 class="card-title">Tool 6</h5>
