--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 
     <footer class="footer mt-auto py-3 bg-dark text-light pixel-border">
         <div class="container text-center">
+            <a href="https://www.freecounterstat.com" title="free hit counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=df48gcw4me5mhpufsaxuxgpnhe37j5we" border="0" title="free hit counter" alt="free hit counter"></a><br><br>
             <span>&copy; 2024 Create by Mr.Patchara Al-umaree</span>
         </div>
     </footer>
